[gd_scene load_steps=14 format=3 uid="uid://b8ysdckdfmi4"]

[ext_resource type="Script" path="res://Scripts/world_setup.gd" id="1_7jt0s"]
[ext_resource type="FontFile" uid="uid://iqirkws52jts" path="res://Fonts/Crang.ttf" id="3_fk470"]
[ext_resource type="Script" path="res://Scripts/ui_manager.gd" id="3_go60c"]
[ext_resource type="PackedScene" uid="uid://c4wkxr1feq4q5" path="res://Scenes/level.tscn" id="4_y7h7v"]
[ext_resource type="PackedScene" uid="uid://dycqjvy8lo2fx" path="res://Scenes/target.tscn" id="5_tom0m"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_5tl84"]
turbidity = 0.0
ground_color = Color(0.705882, 0.376471, 0.203922, 1)

[sub_resource type="Sky" id="Sky_7sg5j"]
sky_material = SubResource("PhysicalSkyMaterial_5tl84")

[sub_resource type="Environment" id="Environment_ovwmq"]
resource_local_to_scene = true
background_mode = 2
background_color = Color(1, 1, 1, 1)
sky = SubResource("Sky_7sg5j")
ambient_light_source = 2
ambient_light_color = Color(0.964706, 0.972549, 0.917647, 1)
ambient_light_energy = 0.2
tonemap_exposure = 1.1
ssr_depth_tolerance = 21.81
ssao_radius = 4.0
ssao_intensity = 5.0
ssao_detail = 1.0
ssao_sharpness = 0.0
ssil_enabled = true
ssil_radius = 2.0
ssil_intensity = 2.0
ssil_sharpness = 0.0
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_levels/6 = 1.0
glow_levels/7 = 1.0
glow_intensity = 0.25
glow_strength = 0.2
glow_bloom = 0.2
glow_blend_mode = 0
fog_light_energy = 0.33
fog_sun_scatter = 0.11
fog_density = 0.0521
fog_sky_affect = 0.97
adjustment_enabled = true
adjustment_contrast = 0.9
adjustment_saturation = 1.2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_yqlyn"]
exposure_multiplier = 1.5
dof_blur_far_distance = 20.0

[sub_resource type="LabelSettings" id="LabelSettings_mp0ep"]
font = ExtResource("3_fk470")
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cyb20"]
bg_color = Color(0.609569, 0.639727, 0.612209, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ruyc1"]
bg_color = Color(0.972549, 0.0235294, 0.164706, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_jp7i1"]
font = ExtResource("3_fk470")
font_size = 32
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="World" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.9, -3.59575)
script = ExtResource("1_7jt0s")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ovwmq")
camera_attributes = SubResource("CameraAttributesPractical_yqlyn")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.382043, -0.813947, 0.437646, -0.264261, 0.550013, 0.792245, -0.885556, 0.187019, -0.425223, 14, 12.5453, 18.4459)
layers = 3
light_color = Color(0.972549, 0.988235, 0.858824, 1)
light_energy = 1.2
shadow_enabled = true
shadow_bias = 0.06
shadow_normal_bias = 1.0
shadow_opacity = 0.8
shadow_blur = 1.5
directional_shadow_mode = 0
directional_shadow_split_1 = 0.2
directional_shadow_fade_start = 0.85
directional_shadow_max_distance = 70.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="FrameCounter" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_go60c")

[node name="FPS" type="Label" parent="UI/FrameCounter"]
layout_mode = 1
offset_left = 32.0
offset_top = 24.0
offset_right = 108.0
offset_bottom = 60.0
text = "FPS"
label_settings = SubResource("LabelSettings_mp0ep")

[node name="MultiplayerMenu" type="PanelContainer" parent="UI/FrameCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 483.0
offset_top = 273.0
offset_right = -483.0
offset_bottom = -273.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/FrameCounter/MultiplayerMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/FrameCounter/MultiplayerMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Host" type="Button" parent="UI/FrameCounter/MultiplayerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="Join" type="Button" parent="UI/FrameCounter/MultiplayerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="IP" type="LineEdit" parent="UI/FrameCounter/MultiplayerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP Adress..."

[node name="Health" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="UI/Health"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -45.0
offset_right = 111.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_cyb20")
theme_override_styles/fill = SubResource("StyleBoxFlat_ruyc1")
step = 1.0
value = 100.0
show_percentage = false

[node name="AmmoUI" type="Control" parent="UI" groups=["HUD"]]
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Ammo" type="Label" parent="UI/AmmoUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 71.0
offset_top = -80.0
offset_right = 147.0
offset_bottom = -44.0
grow_vertical = 0
text = "6/6"
label_settings = SubResource("LabelSettings_jp7i1")
vertical_alignment = 1

[node name="level" parent="." instance=ExtResource("4_y7h7v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.21261, -3.35817, 5.76229)

[node name="target" parent="level" instance=ExtResource("5_tom0m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.41331, 3.58073, -16.3647)

[node name="target2" parent="level" instance=ExtResource("5_tom0m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.32504, 3.58073, -8.91644)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="UI/FrameCounter/MultiplayerMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/FrameCounter/MultiplayerMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
